# TheGameWithNinjas

./: CMakeLists.txt  scratch.gitignore
src/: CMakeLists.txt  main.cpp
src/character/: Archer.cpp  Archer.h  Character.cpp  Character.h  common.cpp  common.h
src/db/: UserDb.cpp  UserDb.h  UserModel.h
